Update links ref to recipes directory

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="casserole.html">Yummy Sweet Potato Casserole</a>
-    <a href="garlic-chicken.html">Garlic Fried Chicken</a>
-    <a href="chicken-parmesan.html">Chicken Parmesan</a>
+    <a href="recipes/casserole.html">Yummy Sweet Potato Casserole</a>
+    <a href="recipes/garlic-chicken.html">Garlic Fried Chicken</a>
+    <a href="recipes/chicken-parmesan.html">Chicken Parmesan</a>
 </body>
 </html>
