--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Yummy Sweet Potato Casserole</h1>
+
+    <!-- 
+        iteration 3
+        image of the finished dish under `h1` -- can be found in Allrecipes.com 
+        Under the image, it should have an appropriately sized "Description"
+        Or just get the rest of the info here. https://www.theodinproject.com/lessons/foundations-recipes
+        
+    -->
 </body>
 </html>
