--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/casserole.html">Yummy Sweet Potato Casserole</a>
-    <a href="recipes/garlic-chicken.html">Garlic Fried Chicken</a>
-    <a href="recipes/chicken-parmesan.html">Chicken Parmesan</a>
+
+    <ul>
+        <li><a href="recipes/casserole.html">Yummy Sweet Potato Casserole</a></li>
+        <li><a href="recipes/garlic-chicken.html">Garlic Fried Chicken</a></li>
+        <li><a href="recipes/chicken-parmesan.html">Chicken Parmesan</a></li>
+    </ul>
+
 
 
     <!--  https://www.theodinproject.com/lessons/foundations-recipes -->
