--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casserole</title>
+    <link href="recipes.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Yummy Sweet Potato Casserole</h1>
+    <img class="casserole" src="https://www.allrecipes.com/thmb/LyDGXMFaUZvRJEHK4yMMnh34GZY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21261-yummy-sweet-potato-casserole-vat-hero-01-4x3-1-8aed3b40c0be41cbbc8928910b773eae.jpg" 
+    alt="Grapefruit slice atop a pile of other slices" />
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <p>A traditional holiday table wouldn't be complete without a sweet potato casserole. 
+        Perfectly flavored and topped with an irresistible pecan topping, 
+        this is the only sweet potato casserole recipe you'll ever need.</p>
+    
+    <br><br>
+
+    <h1>Ingredients</h1>
+
+    <h3>Sweet Potatoes</h3>
+        <ul>4 cups peeled, cubed sweet potatoes</ul>
+        <ul>2 large eggs, beaten</ul>
+        <ul>½ cup white sugar</ul>
+        <ul>½ cup milk</ul>
+        <ul>4 tablespoons butter, softened</ul>
+        <ul>½ teaspoon vanilla extract</ul>
+        <ul>½ teaspoon salt</ul>
+
+    <h3>Pecan Topping</h3>
+        <ul>1/2 cup packed brown sugar</ul>
+        <ul>1/3 cup all-purpose flour</ul>
+        <ul>3 tbsp butter, softened</ul>
+        <ul>1/2 cup chopped pecans</ul>
+
+     
+    <h3>Directions</h3>
+    <ol>
+        <li>Gather the ingredients. Preheat oven to 325 degrees F (165 degrees C).</li>
+        <li>To prepare the sweet potatoes: Put sweet potatoes in a medium saucepan and cover with water. 
+            Cook over medium-high heat until tender, 10 to 15 minutes. Drain and transfer to a large bowl.</li>
+        <li>Mash drained sweet potatoes with a fork. Add eggs; mix until well combined. 
+            Add sugar, milk, butter, vanilla, and salt; mix until smooth. Transfer to a 9x13-inch baking dish.</li>
+        <li>To make the topping: Mix brown sugar and flour together in a medium bowl. 
+            Cut in butter with a pastry cutter until mixture is coarse and looks like peas; 
+            don't overmix. Stir in pecans. Sprinkle topping over sweet potato mixture.</li>
+        <li>Bake in the preheated oven until topping is lightly browned, about 30 minutes.</li>
+        <li>Serve and enjoy!</li>
+    </ol>
+ 
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- 
         iteration 3
