--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Parmesan</title>
+    <link href="recipes.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Chicken Parmesan</h1>
